--- a/templates/base_dashboard.html
+++ b/templates/base_dashboard.html
@@ -84,7 +84,7 @@
                     <div id="menu-body" class="panel-body">
                         <div class="row">
                             <a href="{% url 'customer:real_register' %}">
-                                تعریف مشتری حقوقی
+                                تعریف مشتری حقیقی
                             </a>
                         </div>
                         <div class="row">
