input type bug resolved

--- a/start_grant/templates/_asset_info.html
+++ b/start_grant/templates/_asset_info.html
@@ -31,7 +31,7 @@
                         حسابهای بانکی
                     </div>
                     <div class="col-xs-3">
-                        <input type="text" class="form-control" name="account"
+                        <input type="number" class="form-control" name="account"
                                value="{{ customer_info.asset_info.account }}"
                                required
                                data-validation-required-message="وارد کردن این فیلد الزامی است"
