guarantor list typo resolved

--- a/guarantor/templates/guarantor_list.html
+++ b/guarantor/templates/guarantor_list.html
@@ -69,7 +69,7 @@
             <div class="row new_guarantor" style="margin-top:15px;" id="new_enterprise_guarantor">
                 <div class="col-xs-3">
                     <span class="glyphicon glyphicon-plus" style="color:#00dd00;"></span>
-                    ضامن حقیقی جدید
+                  ضامن حقوقی جدید
                 </div>
             </div>
         {% endif %}
