Agent registeration added

--- a/start_grant/templates/start.html
+++ b/start_grant/templates/start.html
@@ -16,26 +16,26 @@
                     {% csrf_token %}
                     <div class="form-group control-group">
 
-{#                        <div class="row controls">#}
-{#                            <div class="col-xs-1"></div>#}
-{#                            <div class="col-xs-5">#}
-{#                                ثبت درخواست توسط وکیل#}
-{#                            </div>#}
-{#                            <div class="col-xs-4">#}
-{#                                <input type="checkbox" id="is_agent"/>#}
-{#                            </div>#}
-{#                        </div>#}
-{#                        <div class="collapse" id="agent_form">#}
-{#                            <div class="row">#}
-{#                                <div class="col-xs-1"></div>#}
-{#                                <div class="col-xs-5">#}
-{#                                    شماره ملی#}
-{#                                </div>#}
-{#                                <div class="col-xs-4">#}
-{#                                    <input class="form-control" type="text" name="national_number"/>#}
-{#                                </div>#}
-{#                            </div>#}
-{#                        </div>#}
+                        <div class="row controls">
+                            <div class="col-xs-1"></div>
+                            <div class="col-xs-5">
+                                ثبت درخواست توسط وکیل
+                            </div>
+                            <div class="col-xs-4">
+                                <input type="checkbox" id="is_agent"/>
+                            </div>
+                        </div>
+                        <div class="collapse" id="agent_form">
+                            <div class="row">
+                                <div class="col-xs-1"></div>
+                                <div class="col-xs-5">
+                                    شماره ملی وکیل
+                                </div>
+                                <div class="col-xs-4">
+                                    <input class="form-control" type="number" name="agent_national_number"/>
+                                </div>
+                            </div>
+                        </div>
                         <div class="row controls">
                             <div class="col-xs-1"></div>
                             <div class="col-xs-5">
