readonly mode added to enterprise submit data

--- a/start_grant/templates/enterprise_submit_data.html
+++ b/start_grant/templates/enterprise_submit_data.html
@@ -5,18 +5,18 @@
     <div style="border: 1px solid #dddddd;border-radius: 5px;"
          class="form-group">
     <div class="row rose-progress-bar" style="padding-top:15px;padding-bottom:15px; margin:0px;">
-    <div class="col-xs-2
+        <div class="col-xs-2
             {% if customer_info %}
             completed
             {% else %}
             pending
             {% endif %}
             rose-progress-bar-cell" id="customer_info">
-        <div class="row">
-            <div class="col-xs-8">
-                اطلاعات ثبتی شرکت
-            </div>
-            <div id="customer_info_state" class="col-xs-1">
+            <div class="row">
+                <div class="col-xs-8">
+                    اطلاعات ثبتی شرکت
+                </div>
+                <div id="customer_info_state" class="col-xs-1">
                         <span id="failed" class="glyphicon glyphicon-remove" style="color: red;
                                  display: none;
 
@@ -26,24 +26,24 @@
                                     display: none;
                                 {% endif %}
                                 "></span>
-            </div>
-            <div id="customer_info_loader" class="col-xs-1">
+                </div>
+                <div id="customer_info_loader" class="col-xs-1">
 
+                </div>
             </div>
         </div>
-    </div>
-    <div class="col-xs-2
+        <div class="col-xs-2
             {% if customer_info.director_set %}
             completed
             {% else %}
             pending
             {% endif %}
             rose-progress-bar-cell" id="director_info">
-        <div class="row">
-            <div class="col-xs-8">
-                اعضا هیات مدیره
-            </div>
-            <div id="board_of_director_state" class="col-xs-1">
+            <div class="row">
+                <div class="col-xs-8">
+                    اعضا هیات مدیره
+                </div>
+                <div id="board_of_director_state" class="col-xs-1">
                         <span id="failed" class="glyphicon glyphicon-remove" style="color: red;
                                  display: none;
 
@@ -53,13 +53,13 @@
                                     display: none;
                                 {% endif %}
                                 "></span>
-            </div>
-            <div id="board_of_director_loader" class="col-xs-1">
+                </div>
+                <div id="board_of_director_loader" class="col-xs-1">
 
+                </div>
             </div>
         </div>
-    </div>
-    <div class="col-xs-2
+        <div class="col-xs-2
 
              {% if customer_info.contact_info %}
                 completed
@@ -68,23 +68,23 @@
              {% endif %}
 
              rose-progress-bar-cell" id="contact_info">
-        <div class="row">
-            <div class="col-xs-8">
-                اطلاعات تماس
-            </div>
-            <div id="contact_info_state" class="col-xs-1">
-                <span id="failed" class="glyphicon glyphicon-remove" style="color: red;display: none;"></span>
+            <div class="row">
+                <div class="col-xs-8">
+                    اطلاعات تماس
+                </div>
+                <div id="contact_info_state" class="col-xs-1">
+                    <span id="failed" class="glyphicon glyphicon-remove" style="color: red;display: none;"></span>
                         <span id="ok" class="glyphicon glyphicon-ok" style="color: green;
                                 {% if not customer_info.contact_info %}
                                     display: none;"></span>
                                 {% endif %}
-            </div>
-            <div id="contact_info_loader" class="col-xs-1">
+                </div>
+                <div id="contact_info_loader" class="col-xs-1">
+                </div>
             </div>
         </div>
-    </div>
 
-    <div class="col-xs-2
+        <div class="col-xs-2
 
              {% if customer_info.activity_info.count > 0 %}
                 completed
@@ -93,45 +93,23 @@
              {% endif %}
 
              rose-progress-bar-cell" id="activity_info">
-        <div class="row">
-            <div class="col-xs-8">
-                زمینه فعالیت
-            </div>
-            <div id="activity_info_state" class="col-xs-1">
-                <span id="failed" class="glyphicon glyphicon-remove" style="color: red;display: none;"></span>
+            <div class="row">
+                <div class="col-xs-8">
+                    زمینه فعالیت
+                </div>
+                <div id="activity_info_state" class="col-xs-1">
+                    <span id="failed" class="glyphicon glyphicon-remove" style="color: red;display: none;"></span>
                         <span id="ok" class="glyphicon glyphicon-ok" style="color: green;
                                 {% if customer_info.activity_info.count == 0 %}
                                     display: none;
                                 {% endif %}"></span>
-            </div>
-            <div id="activity_info_loader" class="col-xs-1">
+                </div>
+                <div id="activity_info_loader" class="col-xs-1">
+                </div>
             </div>
         </div>
-    </div>
-    {#            <div class="col-xs-2#}
-    {#             {% if customer_info.job_info %}#}
-    {#                completed#}
-    {#             {% else %}#}
-    {#                pending#}
-    {#             {% endif %}#}
-    {#             rose-progress-bar-cell" id="job_info">#}
-    {#                <div class="row">#}
-    {#                    <div class="col-xs-8">#}
-    {#                        اطلاعات شغلی#}
-    {#                    </div>#}
-    {#                    <div id="job_info_state" class="col-xs-1">#}
-    {#                        <span id="failed" class="glyphicon glyphicon-remove" style="color: red;display: none;"></span>#}
-    {#                        <span id="ok" class="glyphicon glyphicon-ok" style="color: green;#}
-    {#                                {% if not customer_info.job_info %}#}
-    {#                                    display: none;#}
-    {#                                {% endif %}#}
-    {#                                "></span>#}
-    {#                    </div>#}
-    {#                    <div id="job_info_loader" class="col-xs-1">#}
-    {#                    </div>#}
-    {#                </div>#}
-    {#            </div>#}
-    <div class="col-xs-2
+
+        <div class="col-xs-2
                          {% if customer_request.complete_information %}
                                completed
                          {% else %}
@@ -139,24 +117,24 @@
                          {% endif %}
 
                          rose-progress-bar-cell" id="loan_info">
-        <div class="row">
-            <div class="col-xs-8">
-                اطلاعات تسهیلات
-            </div>
-            <div id="loan_info_state" class="col-xs-1">
-                <span id="failed" class="glyphicon glyphicon-remove" style="color: red;display: none;"></span>
+            <div class="row">
+                <div class="col-xs-8">
+                    اطلاعات تسهیلات
+                </div>
+                <div id="loan_info_state" class="col-xs-1">
+                    <span id="failed" class="glyphicon glyphicon-remove" style="color: red;display: none;"></span>
                                     <span id="ok" class="glyphicon glyphicon-ok" style="color: green;
                                             {% if not customer_request.complete_information %}
                                                 display: none;
                                             {% endif %}
                                             "></span>
-            </div>
-            <div id="loan_info_loader" class="col-xs-1">
+                </div>
+                <div id="loan_info_loader" class="col-xs-1">
+                </div>
             </div>
         </div>
-    </div>
 
-    <div class="col-xs-2
+        <div class="col-xs-2
                          {% if customer_request.vasighe_information %}
                                completed
                          {% else %}
@@ -164,82 +142,59 @@
                          {% endif %}
 
                          rose-progress-bar-cell" id="vasighe_info">
-        <div class="row">
-            <div class="col-xs-8">
-                بانکهای طرف معامله
-            </div>
-            <div id="vasighe_info_state" class="col-xs-1">
-                <span id="failed" class="glyphicon glyphicon-remove" style="color: red;display: none;"></span>
+            <div class="row">
+                <div class="col-xs-8">
+                    بانکهای طرف معامله
+                </div>
+                <div id="vasighe_info_state" class="col-xs-1">
+                    <span id="failed" class="glyphicon glyphicon-remove" style="color: red;display: none;"></span>
                                     <span id="ok" class="glyphicon glyphicon-ok" style="color: green;
                                             {% if not customer_request.vasighe_information %}
                                                 display: none;
                                             {% endif %}
                                             "></span>
-            </div>
-            <div id="vasighe_info_loader" class="col-xs-1">
+                </div>
+                <div id="vasighe_info_loader" class="col-xs-1">
+                </div>
             </div>
         </div>
-    </div>
-    <div class="col-xs-12
+        <div class="col-xs-12
                  {% if customer_info.asset_info %}
                  completed
                  {% else %}
                  pending
                  {% endif %}
                  rose-progress-bar-cell" id="asset_info" style="padding-right: 0px;">
-        <div class="row">
-            <div class="col-xs-9">
-                دارایی ها و بدهی ها
-            </div>
-            <div id="asset_info_state" class="col-xs-1">
-                <span id="failed" class="glyphicon glyphicon-remove" style="color: red;display: none;"></span>
+            <div class="row">
+                <div class="col-xs-9">
+                    دارایی ها و بدهی ها
+                </div>
+                <div id="asset_info_state" class="col-xs-1">
+                    <span id="failed" class="glyphicon glyphicon-remove" style="color: red;display: none;"></span>
                             <span id="ok" class="glyphicon glyphicon-ok" style="color: green;
                                     {% if not customer_info.asset_info %}
                                         display: none;
                                     {% endif %}
                                     "></span>
-            </div>
-            <div id="asset_info_loader" class="col-xs-1">
+                </div>
+                <div id="asset_info_loader" class="col-xs-1">
+                </div>
             </div>
         </div>
     </div>
-    {#            <div class="col-xs-2#}
-    {#             {% if customer_info.bank_income_info %}#}
-    {#             completed#}
-    {#             {% else %}#}
-    {#             pending#}
-    {#             {% endif %}#}
-    {##}
-    {#             rose-progress-bar-cell" id="bank_income_info">#}
-    {#                <div class="row">#}
-    {#                    <div class="col-xs-9">#}
-    {#                        بانکها و درآمد#}
-    {#                    </div>#}
-    {#                    <div id="bank_income_state" class="col-xs-1">#}
-    {#                        <span id="failed" class="glyphicon glyphicon-remove" style="color: red;display: none;"></span>#}
-    {#                        <span id="ok" class="glyphicon glyphicon-ok" style="color: green;#}
-    {#                                {% if not customer_info.bank_income_info %}#}
-    {#                                    display: none;#}
-    {#                                {% endif %}#}
-    {#                                "></span>#}
-    {#                    </div>#}
-    {#                    <div id="bank_income_loader" class="col-xs-1">#}
-    {#                    </div>#}
-    {#                </div>#}
-    {#            </div>#}
-    </div>
-    <div class="row" id="next_level" style="display: none; padding-bottom: 1%;">
-        <form action="{% url 'grant:submit' customer_request.id %}" method="post">
-            {% csrf_token %}
-            <div class="col-xs-12" style="text-align: center;">
-                <button type="submit" style=" width: 90%;" id="contact_info_button" class="btn btn-success">
-                    اکنون با کلیک بر روی این بخش می توانید مراحل بعدی اعطای تسهیلات را انجام دهید
-                </button>
+    {% if not readonly %}
+        <div class="row" id="next_level" style="display: none; padding-bottom: 1%;">
+            <form action="{% url 'grant:submit' customer_request.id %}" method="post">
+                {% csrf_token %}
+                <div class="col-xs-12" style="text-align: center;">
+                    <button type="submit" style=" width: 90%;" id="contact_info_button" class="btn btn-success">
+                        اکنون با کلیک بر روی این بخش می توانید مراحل بعدی اعطای تسهیلات را انجام دهید
+                    </button>
 
-            </div>
-        </form>
-    </div>
-    {#        <form method="post">#}
+                </div>
+            </form>
+        </div>
+    {% endif %}
     <div id="submit_forms" class="form-group">
         <div class="panel-group" style="padding-left: 30px;padding-right: 30px;padding-bottom: 15px;">
             {% if customer_request.type == 'hoghooghi' %}
@@ -276,14 +231,23 @@
 
 {% block js %}
     <script type="text/javascript">
-    var table;
-    function check_for_showing_next_level() {
-        if ($('.pending').length == 0) {
-            $('#next_level').show('slow');
-
-        }
-    }
     $(window).ready(function () {
+        {% if readonly %}
+            $('input').prop('readonly', 'readonly');
+            $('button').hide();
+            $('select').prop('disabled', 'disabled');
+        {% else %}
+            $('input').prop('readonly', null);
+            $('select').prop('disabled', null);
+        {% endif %}
+
+        var table;
+        function check_for_showing_next_level() {
+            if ($('.pending').length == 0) {
+                $('#next_level').show('slow');
+
+            }
+        }
 
 
         check_for_showing_next_level();
