--- a/templates/base_dashboard.html
+++ b/templates/base_dashboard.html
@@ -82,21 +82,25 @@
                         </div>
                     </div>
                     <div id="menu-body" class="panel-body">
-                        <div class="row">
-                            <a href="{% url 'customer:real_register' %}">
-                                تعریف مشتری حقیقی
-                            </a>
-                        </div>
-                        <div class="row">
-                            <a href="{% url 'grant:start' %}">
-                                ثبت درخواست وام جدید
-                            </a>
-                        </div>
-                        <div class="row">
-                            <a href="{% url 'grant:track' %}">
-                                پیگیری درخواستها
-                            </a>
-                        </div>
+                        {% if user.profile.role.name == 'teller' %}
+                            <div class="row">
+                                <a href="{% url 'customer:real_register' %}">
+                                    تعریف مشتری حقیقی
+                                </a>
+                            </div>
+                            <div class="row">
+                                <a href="{% url 'grant:start' %}">
+                                    ثبت درخواست وام جدید
+                                </a>
+                            </div>
+                        {% elif user.profile.role.name == 'superior' %}
+                            <div class="row">
+                                <a href="{% url 'grant:track' %}">
+                                    پیگیری درخواستها
+                                </a>
+                            </div>
+
+                        {% endif %}
                         <div class="row">
                             <a>
                                 تنظیمات
