enquiry_assigned handled

--- a/superior/templates/tasks_list.html
+++ b/superior/templates/tasks_list.html
@@ -41,9 +41,13 @@
                         {% if request.status == 'checklist_completed' %}
                             آماده ارجاع
                             <a href="{% url 'superior:enquiry_assign' request.id %}">ارجاع جهت استعلام</a>
+
+                        {% elif request.status == 'enquiry_assigned' %}
+                            ارجاع شده جهت استعلام
                         {% else %}
                             new
                         {% endif %}
+
                     </td>
                     <td>
                         {% if request.type == 'haghighi' %}
